k8s-platform-v2/01-networking/traefik-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: default
spec:
  ports:
    - name: dashboard
      protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: traefik-external
  namespace: default
subsets:
  - addresses:
      - ip: TRAEFIK_IP_PLACEHOLDER
    ports:
      - name: dashboard
        port: 9000
        protocol: TCP
