k8s-platform-v2/01-networking/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  namespace: default
spec:
  type: ExternalName
  externalName: traefik.kube-system.svc.cluster.local
  ports:
  - name: dashboard
    port: 9000
    protocol: TCP
    targetPort: 9000
