k8s-platform-v2/01-networking/hubble-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hubble.$(INGRESS_DOMAIN)`)
      kind: Rule
      services:
        - name: hubble-ui
          namespace: kube-system
          port: 80
